--- a/index.html
+++ b/index.html
@@ -2230,6 +2230,13 @@
                 </div>
               </div>
               <div>
+                <div class="form-label mb-0"><i class="bi bi-bounding-box"></i> OriginPoint(원점 기준)</div>
+                <select class="form-select" name="originPoint">
+                  <option value="topleft">TOP and LEFT</option>
+                  <option value="center">CENTER</option>
+                </select>
+              </div>
+              <div>
                 <div class="form-label mb-0"><i class="bi bi-square-fill"></i> Border radius(꼭짓점 반경,라운딩박스)</div>
                 <div class="input-group ui-input-stepper">
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
