--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@
           <div class="wc-app-menu wc-app-menu-tool-propety flex-fill  pe-auto  overflow-x-auto ">
             <div class="only-shown only-shown-tool-Transform  p-1" style="min-width: max-content;">
               <div class="d-flex flex-nowrap justify-content-end gap-3 row-gap-1">
-                <div>
+                <!-- <div>
                   <div class="form-label mb-0"><i class="bi bi-info-circle"></i> Action</div>
                   <div class="d-flex flex-wrap gap-1">
                     <button class="btn btn-primary" onclick="editor.tool.confirm();"><i class="bi bi-check"></i> Confirm</button>
                     <button class="btn btn-warning" onclick="editor.tool.cancel();"><i class="bi bi-x"></i> Cancel</button>
                   </div>
-                </div>
+                </div> -->
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-arrows-move"></i> Postion</div>
                   <div class="d-flex flex-wrap gap-1">
@@ -390,7 +390,8 @@
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-bounding-box"></i> Resize</div>
                   <div class="d-flex gap-1">
-                    <button class="btn btn-warning" onclick="editor.document.layer.trim();editor.document.layer.flush();editor.saveHistory();editor.tool.activate(); wcSyncHandler.sync(this.closest('.modal'))"><i class="bi bi-scissors"></i> Trim</button>
+                    <!-- <button class="btn btn-warning" onclick="editor.document.layer.trim();editor.document.layer.flush();editor.saveHistory();editor.tool.activate(); wcSyncHandler.sync(this.closest('.modal'))"><i class="bi bi-scissors"></i> Trim</button> -->
+                    <button class="btn btn-warning" onclick="editor.tool.trim();wcSyncHandler.sync(this.closest('.modal'))"><i class="bi bi-scissors"></i> Trim</button>
                     <button class="btn btn-warning" onclick="if(editor?.document?.layer){ let layer = editor?.document?.layer; layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();}"><i class="bi bi-bounding-box"></i> Fit document</button>
                   </div>
                 </div>
