wc/tool/SelectionRectangle.js 개선

--- a/index.html
+++ b/index.html
@@ -2275,6 +2275,15 @@
                   <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                 </div>
               </div>
+              <div>
+                <div class="form-label mb-0"><i class="bi bi-sliders"></i> mode</div>
+                <select class="form-select" name="mode">
+                  <option value="new">New Selection(새 선택)</option>
+                  <option value="add">Add to Selection (선택에 더하기)</option>
+                  <option value="subtract">Subtract from Selection (선택에서 빼기)</option>
+                  <option value="intersect">Intersect with Selection (선택 교차)</option>
+                </select>
+              </div>
             </form>
           </div>
 
