히스토리 꼬이는 것 수정 완료. Canvas를 히스토리의 layers에 사용하도록 다시 돌림 #30

--- a/index.html
+++ b/index.html
@@ -2481,5 +2481,13 @@
 
 
 
+  <!-- <div id="historyLayers" style="position: fixed; inset:0;pointer-events: none;z-index: 200;"></div>
+  <style>
+    #historyLayers{opacity: 0.8;}
+    #historyLayers canvas{width:100px; outline: 1px solid #abc; background-color: #fff9;}
+  </style> -->
+
+
+
 </body>
 </html>
