--- a/index.html
+++ b/index.html
@@ -1794,6 +1794,7 @@
                       <button type="button" class="btn text-start btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.dipPen(WcHelper.getBrushCanvas(this));"><i class="bi bi-vector-pen"></i> Dip pen</button>
                       <button type="button" class="btn text-start btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.inkBrush(WcHelper.getBrushCanvas(this));"><i class="bi bi-brush"></i> Ink Brush</button>
                       <button type="button" class="btn text-start btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.airbrush(WcHelper.getBrushCanvas(this));"><i class="bi bi-brush"></i> Air Brush</button>
+                      <button type="button" class="btn text-start btn-info btn-brush-configurator" onclick="Wc.BrushConfigurator.crayon(WcHelper.getBrushCanvas(this));"><i class="bi bi-pencil-fill"></i> Crayon</button>
                     </div>
                   </div>
                   <div class="brush-nav-tab" data-brush-tab="config">
@@ -2423,6 +2424,7 @@
       <img src="./asset/brush/shape/brush-02.png" id="brush-shape-brush-02"  data-shape-label="브러시-02">
       <img src="./asset/brush/shape/brush-03.png" id="brush-shape-brush-03"  data-shape-label="브러시-03">
       <img src="./asset/brush/shape/brush-04.png" id="brush-shape-brush-04"  data-shape-label="브러시-04">
+      <img src="../../asset/brush/shape/brush-sponge.png" id="brush-shape-brush-sponge"  data-shape-label="브러시-스펀지">
     </div>
     <script>
       window.addEventListener('load',()=>{
