--- a/index.html
+++ b/index.html
@@ -431,7 +431,8 @@
                 <div>
                   <div class="form-label mb-0"><i class="bi bi-info-circle"></i> Action</div>
                   <div class="d-flex flex-nowrap gap-1">
-                    <button class="btn btn-warning text-nowrap" onclick="editor.document.selectionLayer.eraseLayer(editor.document.layer);editor.document.layer.flush();editor.saveHistory('erase');"><i class="bi bi-eraser-fill"></i> Erase</button>
+                    <button class="btn btn-warning text-nowrap" onclick="editor.document.selectionLayer.eraseLayer(editor.document.layer);editor.document.layer.flush();editor.saveHistory('eraseLayer');"><i class="bi bi-eraser-fill"></i> Erase</button>
+                    <button class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.blurLayer(editor.document.layer);editor.document.layer.flush();editor.saveHistory('blurLayer');"><i class="bi bi-shadows"></i> Blur</button>
                   </div>
                 </div>
                 <div>
