설정 모달에서 클릭시 이상 동작하는 것 수정

--- a/index.html
+++ b/index.html
@@ -2228,8 +2228,8 @@
             <h2 class="modal-title fs-4"><i class="bi bi-square-fill"></i> Rectangle</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body" onclick="wcSyncHandler.sync(this.closest('.modal'))">
-            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
+          <div class="modal-body">
+            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" onclick=" Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-square-fill"></i> Border radius(꼭짓점 반경,라운딩박스)</div>
                 <div class="input-group ui-input-stepper">
@@ -2274,7 +2274,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" >
-            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" onclick=" Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
+            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-square-fill"></i> Border radius(꼭짓점 반경,라운딩박스)</div>
                 <div class="input-group ui-input-stepper">
@@ -2354,8 +2354,8 @@
             <h2 class="modal-title fs-4"><i class="bi bi-pentagon-fill"></i> Polygon</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body" onclick="wcSyncHandler.sync(this.closest('.modal'))">
-            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" oninput="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
+          <div class="modal-body" >
+            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
               <div>
                 <div class="form-label mb-0"><i class="bi bi-pentagon"></i> Points(꼭지점의 수)</div>
                 <div class="input-group ui-input-stepper">
@@ -2399,8 +2399,8 @@
             <h2 class="modal-title fs-4"><i class="bi bi-pentagon-fill"></i> star</h2>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body" onclick="wcSyncHandler.sync(this.closest('.modal'))">
-            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" oninput="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))">
+          <div class="modal-body" >
+            <form class="d-flex flex-column gap-3" action="" data-wc-sync-form="editor.tool" onsubmit="return false;" onchange="Object.assign(editor.tool,Wc.HtmlUtil.formToObject(this))" >
               <div>
                 <div class="form-label mb-0"><i class="bi bi-pentagon"></i> Points(꼭지점의 수)</div>
                 <div class="input-group ui-input-stepper">
