--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
                   <div class="form-label mb-0"><i class="bi bi-info-circle"></i> Action</div>
                   <div class="d-flex flex-nowrap gap-1">
                     <button class="btn btn-warning text-nowrap" onclick="editor.document.selectionLayer.eraseLayer(editor.document.layer);editor.document.layer.flush();editor.saveHistory('eraseLayer');"><i class="bi bi-eraser-fill"></i> Erase</button>
-                    <button class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.blurLayer(editor.document.layer,editor.tool.blurSize);editor.document.layer.flush();editor.saveHistory('blurLayer');"><i class="bi bi-shadows"></i> Blur</button>
-                    <button class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.mosaicLayer(editor.document.layer,editor.tool.mosaicSize);editor.document.layer.flush();editor.saveHistory('mosaicLayer');"><i class="bi bi-grid-3x3-gap-fill"></i> Mosaic</button>
+                    <button class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.filterLayer(editor.document.layer,'blur',editor.tool.blurVal);editor.document.layer.flush();editor.saveHistory('filterLayer.blur');"><i class="bi bi-shadows"></i> Blur</button>
+                    <button class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.mosaicLayer(editor.document.layer,editor.tool.mosaicVal);editor.document.layer.flush();editor.saveHistory('mosaicLayer');"><i class="bi bi-grid-3x3-gap-fill"></i> Mosaic</button>
                   </div>
                 </div>
                 <div>
@@ -2292,13 +2292,13 @@
                     <div class="input-group ui-input-stepper">
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                       <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" data-value="1">
-                        <input type="range" class="form-range d-block" name="blurSize" placeholder="blurSize" step="1" min="1" max="10" value="0">
+                        <input type="range" class="form-range d-block" name="blurVal" placeholder="blurVal" step="1" min="0" max="10" value="0">
                       </div>
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                     </div>
                   </div>
                   <div>
-                    <button type="button" class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.blurLayer(editor.document.layer,this.form.blurSize.value);editor.document.layer.flush();editor.saveHistory('blurLayer');">Apply</button>
+                    <button type="button" class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.filterLayer(editor.document.layer,'blur',this.form.blurVal.value);editor.document.layer.flush();editor.saveHistory('filterLayer.blur');">Apply</button>
                   </div>
                 </div>
               </div>
@@ -2309,13 +2309,13 @@
                     <div class="input-group ui-input-stepper">
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
                       <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" data-value="1">
-                        <input type="range" class="form-range d-block" name="mosaicSize" placeholder="mosaicSize" step="1" min="1" max="10" value="0">
+                        <input type="range" class="form-range d-block" name="mosaicVal" placeholder="mosaicVal" step="1" min="1" max="10" value="0">
                       </div>
                       <button type="button" class="btn btn-primary btn-stepper" data-stepper="up">+</button>
                     </div>
                   </div>
                   <div>
-                    <button type="button" class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.mosaicLayer(editor.document.layer,this.form.mosaicSize.value);editor.document.layer.flush();editor.saveHistory('mosaicLayer');">Apply</button>
+                    <button type="button" class="btn btn-info text-nowrap" onclick="editor.document.selectionLayer.mosaicLayer(editor.document.layer,this.form.mosaicVal.value);editor.document.layer.flush();editor.saveHistory('mosaicLayer');">Apply</button>
                   </div>
                 </div>
                                   
