--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
               
               <label role="button" title="tool Brush2" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Brush2" onclick="editor.tools.select(this.value);"><button type="button" class="btn btn-md btn-outline-success pe-none position-relative"><i class="bi bi-brush"></i><small class="position-absolute bottom-0" style="right:0.5em">2</small></button></label>
               <label role="button" title="tool Brush3" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Brush3" onclick="editor.tools.select(this.value);"><button type="button" class="btn btn-md btn-outline-success pe-none position-relative"><i class="bi bi-brush"></i><small class="position-absolute bottom-0" style="right:0.5em">3</small></button></label>
-              <label role="button" title="tool Brush for Test" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Brush" onclick="editor.tools.select(this.value);Wc.BrushConfigurator.pen(editor.tool.brush);"><button type="button" class="btn btn-md btn-outline-success pe-none position-relative"><i class="bi bi-brush"></i><small class="position-absolute bottom-0" style="right:0.5em">t</small></button></label>
+              <label role="button" title="tool Brush for Test" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Brush" onclick="editor.tools.select(this.value);editor.brush.setBrushConfig(Wc.BrushConfigStore.load('brush-t'));editor.brush.flush();"><button type="button" class="btn btn-md btn-outline-success pe-none position-relative"><i class="bi bi-brush"></i><small class="position-absolute bottom-0" style="right:0.5em">t</small></button></label>
+              <label role="button" title="tool Brush for Test" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Brush" onclick="editor.tools.select(this.value);editor.brush.setBrushConfig(Wc.BrushConfigStore.load('brush-t2'));editor.brush.flush();"><button type="button" class="btn btn-md btn-outline-success pe-none position-relative"><i class="bi bi-brush"></i><small class="position-absolute bottom-0" style="right:0.5em">t2</small></button></label>
 
               <label role="button" title="tool Eraser" ><input hidden class="btn-check position-absolute checkbox-tool" type="radio" name="tool"  value="Eraser" onclick="editor.tools.select(this.value);"><button type="button" class="btn btn-md btn-outline-success pe-none"><i class="bi bi-eraser"></i></button></label>
 
@@ -2194,7 +2195,10 @@
               container.querySelectorAll('.ui-input-stepper input')?.forEach((input)=>{ UiInputStepper.syncDataValue(input); })
             }
             // 브러시가 draw 하면 미리보기를 다시 그린다.
-            editor.brush.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.brush) })
+            editor.brush.addEventListener('draw',(event)=>{ 
+              previewAndSyncForm(editor.brush) 
+              Wc.BrushConfigStore.saveToLastKey(editor.brush.brushConfig)
+            })
             editor.brush2.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.brush2) })
             editor.brush3.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.brush3) })
             editor.eraser.addEventListener('draw',(event)=>{ previewAndSyncForm(editor.eraser,true) })
