fix 404 brush-sponge.png

--- a/index.html
+++ b/index.html
@@ -2484,7 +2484,7 @@
       <img src="./asset/brush/shape/brush-02.png" id="brush-shape-brush-02"  data-shape-label="브러시-02">
       <img src="./asset/brush/shape/brush-03.png" id="brush-shape-brush-03"  data-shape-label="브러시-03">
       <img src="./asset/brush/shape/brush-04.png" id="brush-shape-brush-04"  data-shape-label="브러시-04">
-      <img src="../../asset/brush/shape/brush-sponge.png" id="brush-shape-brush-sponge"  data-shape-label="브러시-스펀지">
+      <img src="./asset/brush/shape/brush-sponge.png" id="brush-shape-brush-sponge"  data-shape-label="브러시-스펀지">
     </div>
     <script>
       window.addEventListener('load',()=>{
